--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,66 +28,35 @@ jobs:
           java-version: '21'
           cache: 'maven'
 
-      - name: Setup DynamoDB Local (robust)
+      - name: Wait for DynamoDB
         run: |
-          echo "🗄️ Setting up DynamoDB Local connection..."
-          # Wait for DynamoDB Local to be ready
-          echo "Waiting for DynamoDB service to initialize..."
-          sleep 25
-          
-          # Test DynamoDB connection with timeout
-          echo "Testing DynamoDB availability..."
-          for i in {1..8}; do
-            if curl -s --connect-timeout 3 --max-time 5 http://localhost:8000/ >/dev/null 2>&1; then
-              echo "✅ DynamoDB Local is ready and responding!"
+          sleep 30
+          for i in {1..5}; do
+            if curl -s --connect-timeout 3 http://localhost:8000/ >/dev/null 2>&1; then
+              echo "DynamoDB Local ready"
               break
             fi
-            if [ $i -eq 8 ]; then
-              echo "✅ DynamoDB setup completed (service may still be starting)"
-            else
-              echo "Attempt $i/8: Waiting for DynamoDB..."
-              sleep 5
-            fi
+            sleep 5
           done
-          
-          echo "✅ DynamoDB Local setup completed successfully"
 
       - name: Build application
-        run: |
-          echo "🔨 Building IoT Smart Home Dashboard..."
-          mvn clean package -DskipTests
-          ls -la target/
+        run: mvn clean package -DskipTests
 
-      - name: Verify JAR file
+      - name: Verify JAR
         run: |
-          if [ -f "target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar" ]; then
-            echo "JAR file created successfully!"
-            echo "Size: $(du -h target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar)"
-          else
-            echo "JAR file not found!"
-            exit 1
-          fi
+          ls -la target/
+          test -f target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar
 
       - name: Build Docker image
         run: |
-          echo "Building Docker image..."
           docker build -t iot-smarthome-dashboard:latest .
           docker build -t iot-smarthome-dashboard:v${{ github.run_number }} .
-          echo "Docker images built successfully!"
 
-      - name: Test Docker image (zero error approach)
+      - name: Test Docker image
         run: |
-          echo "🧪 Testing Docker image..."
           docker images | grep iot-smarthome-dashboard
-          
-          echo "✅ Docker image built successfully!"
-          echo "Image size: $(docker images iot-smarthome-dashboard:latest --format 'table {{.Size}}' | tail -1)"
-          
-          # Simple container validation - just check it exists and is runnable
-          echo "🔍 Validating container can be created..."
-          docker create --name test-container iot-smarthome-dashboard:latest > /dev/null
-          docker rm test-container > /dev/null
-          echo "✅ Container validation successful!"
+          docker create --name test-container iot-smarthome-dashboard:latest
+          docker rm test-container
 
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
@@ -95,41 +64,3 @@ jobs:
           name: dashboard-jar-v${{ github.run_number }}
           path: target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar
           retention-days: 30
-
-      - name: Verify DynamoDB Connection (error-free)
-        run: |
-          echo "🗄️ Verifying DynamoDB Local service..."
-          
-          # Check if DynamoDB service is running (non-blocking)
-          if curl -s --connect-timeout 5 http://localhost:8000/ >/dev/null 2>&1; then
-            echo "✅ DynamoDB Local is running on port 8000"
-            echo "✅ Database service ready for connections"
-          else
-            echo "✅ DynamoDB service check completed"
-          fi
-          
-          # Always succeed - no errors
-          echo "✅ Database verification completed successfully"
-
-      - name: Zero Error Success Summary
-        run: |
-          echo ""
-          echo "🎆 ZERO ERROR BUILD & DOCKERIZATION SUCCESS! 🎆"
-          echo "===================================================="
-          echo ""
-          echo "✅ Java application: BUILT SUCCESSFULLY"
-          echo "✅ JAR artifact: CREATED WITHOUT ERRORS"
-          echo "✅ DynamoDB Local: SERVICE RUNNING"
-          echo "✅ Docker image: BUILT PERFECTLY"
-          echo "✅ Container validation: PASSED WITH ZERO ERRORS"
-          echo "✅ All tests: COMPLETED SUCCESSFULLY"
-          echo ""
-          echo "🏆 PERFECT SCORE: 0 ERRORS, 0 WARNINGS"
-          echo ""
-          echo "📦 Production-Ready Artifacts:"
-          echo "  ✅ JAR: dashboard-jar-v${{ github.run_number }}"
-          echo "  ✅ Docker: iot-smarthome-dashboard:v${{ github.run_number }}"
-          echo "  ✅ Database: DynamoDB Local ready on port 8000"
-          echo ""
-          echo "🚀 DEPLOYMENT READY - ZERO ERROR GUARANTEE!"
-          echo "🎓 College Project: REQUIREMENTS EXCEEDED!"
