--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Build and Dockerize Dashboard
+name: Build and Push Docker Image
 
 on:
   push:
@@ -8,15 +8,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-dockerize:
+  build-and-push:
     runs-on: ubuntu-latest
-    
+
     services:
       dynamodb:
         image: amazon/dynamodb-local:1.21.0
         ports:
           - 8000:8000
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -68,35 +68,15 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Created version: $VERSION"
 
-      - name: Save Docker image as tarball
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Tag Docker image
         run: |
-          docker save iot-smarthome-dashboard:latest -o iot-smarthome-dashboard-v${{ steps.version.outputs.version }}.tar
-          ls -lh *.tar
+          docker tag iot-smarthome-dashboard:latest ghcr.io/${{ github.repository_owner }}/iot-smarthome-dashboard:latest
+          docker tag iot-smarthome-dashboard:latest ghcr.io/${{ github.repository_owner }}/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sudipto-iot-smarthome-jar-v${{ steps.version.outputs.version }}
-          path: target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar
-          retention-days: 90
-
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sudipto-iot-smarthome-docker-v${{ steps.version.outputs.version }}
-          path: iot-smarthome-dashboard-v${{ steps.version.outputs.version }}.tar
-          retention-days: 90
-
-      # Optional: Push to Docker Hub
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      # 
-      # - name: Push to Docker Hub
-      #   run: |
-      #     docker tag iot-smarthome-dashboard:latest ${{ secrets.DOCKER_USERNAME }}/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
-      #     docker tag iot-smarthome-dashboard:latest ${{ secrets.DOCKER_USERNAME }}/iot-smarthome-dashboard:latest
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/iot-smarthome-dashboard:latest
+      - name: Push Docker image to GHCR
+        run: |
+          docker push ghcr.io/${{ github.repository_owner }}/iot-smarthome-dashboard:latest
+          docker push ghcr.io/${{ github.repository_owner }}/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
