--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,10 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -69,14 +73,19 @@ jobs:
           echo "Created version: $VERSION"
 
       - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Tag Docker image
+        if: github.event_name != 'pull_request'
         run: |
-          docker tag iot-smarthome-dashboard:latest ghcr.io/sdasezcodin/iot-smarthome-dashboard:latest
-          docker tag iot-smarthome-dashboard:latest ghcr.io/sdasezcodin/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker tag iot-smarthome-dashboard:latest ghcr.io/$REPO_OWNER/iot-smart-home:latest
+          docker tag iot-smarthome-dashboard:latest ghcr.io/$REPO_OWNER/iot-smart-home:v${{ steps.version.outputs.version }}
 
       - name: Push Docker image to GHCR
+        if: github.event_name != 'pull_request'
         run: |
-          docker push ghcr.io/sdasezcodin/iot-smarthome-dashboard:latest
-          docker push ghcr.io/sdasezcodin/iot-smarthome-dashboard:v${{ steps.version.outputs.version }}
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker push ghcr.io/$REPO_OWNER/iot-smart-home:latest
+          docker push ghcr.io/$REPO_OWNER/iot-smart-home:v${{ steps.version.outputs.version }}
